--- a/templates/email.1.html
+++ b/templates/email.1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="../static/index3.css">
+    <link rel="stylesheet" href="../static/index.css">
     <link href="https://fonts.googleapis.com/css?family=Libre+Franklin"rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Libre+Franklin:700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet">
@@ -22,9 +22,9 @@
                         C4E22 CAREER    
                     </div>
                     <div id = 'headercontent'>
-                        <a href="/home" class = header>HOME</a>
-                        <a href="/personal_types" class = header>PERSONALITY</a>
-                        <a href="/job_sector" class = header >JOBS</a>
+                        <a href="E:\c4e22\career_project\templates\home.html" class = header>HOME</a>
+                        <a href="E:\c4e22\career_project\templates\personality.html" class = header>PERSONALITY</a>
+                        <a href="/job" class = header >JOBS</a>
                         <a href="/topics" class = header >HOT</a>
                         <a href="/story" class = header  id = 'email'>EMAIL US</a>
                     </div>
@@ -32,7 +32,7 @@
         <div id = txt>
             <i id = lttxt>Let us help you</i>
             <b id = bigtxt>FIND YOUR CAREER</b>
-            <a href="/quiz" id = quiz> <b>TRY THIS OUT</b>  </a>
+            <a href="" id = quiz> <b>TRY THIS OUT</b>  </a>
         </div>
     </div> 
 
@@ -46,6 +46,9 @@
     </div> 
 <div id = "footer">
         <p> Tầng 6, nhà C, tòa nhà Chigamex - 22 Thành Công, Ba Đình, Hà Nội -- c4e22career@gmail.com</p>
-</div>
+        <div id = logo>
+            C4E22 CAREER    
+        </div>
+    </div>
 </body>
 </html>
